--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,22 +1,25 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: edu-red # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Webmail-DGE
+    url: http://www.webmail.mendoza.edu.ar
+  - name: Portal-DGE
+    url: https://www.mendoza.edu.ar
+  - name: Webmail-GOV
+    url: https://rcmail.mendoza.gov.ar/
+  - name: Portal-GOV
+    url: https://www.mendoza.gov.ar
+    
+assignees:
+  - edu-red
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
+  # cname: demo.upptime.js.org
+  baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
