--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,8 +18,8 @@ assignees:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /upptime
+  # cname: demo.upptime.js.org
+  baseUrl: /DGE-GOV
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name:  Eduardo Romero
   introTitle: "**Upptimes** is the open-source uptime monitor and status page, powered entirely by GitHub."
