--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: edu-red # Your GitHub organization or username, where this repository lives
-repo: DGE-GOV # The name of this repository
+repo: upptime # The name of this repository
 
 sites:
   - name: Webmail-DGE
