--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: edu-red # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+repo: DGE-GOV # The name of this repository
 
 sites:
   - name: Webmail-DGE
@@ -19,7 +19,7 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
-  baseUrl: /upptime
+  baseUrl: /DGE-GOV
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name:  Eduardo Romero
   introTitle: "**Upptimes** is the open-source uptime monitor and status page, powered entirely by GitHub."
