--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -22,8 +22,8 @@ status-website:
   baseUrl: /DGE-GOV
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name:  Eduardo Romero
-  introTitle: "**Upptimes** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "**Monitor de servicios**"
+  introMessage: [Dirección General de Escuelas](https://www.mendoza.edu.ar) - [Gobierno de la provincia de Mendoza](https://www.mendoza.gov.ar)
   navbar:
     - title: Status
       href: /
