--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -33,6 +33,10 @@ status-website:
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
+  i18n:
+      activeIncidents: Incidentes activos
+      allSystemsOperational: Todos los sistemas están operativos
+  # ...
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
